# BWC-DME-Reviewer

./: .gitignore  LICENSE  README.md  bodycam_transcription_brief.md  dev-chrome.html  dev-shim.js  dev_server.py  forge.config.js  index.html  package-lock.json  package.json  pyproject.toml  serve.py  vitest.config.js
docs/: BURN-IN-2026-04-30.md  HANDOFF.md
docs/superpowers/plans/: 2026-04-29-bwc-clipper-milestone-0-skeleton.md  2026-04-29-bwc-clipper-milestone-1-folder-open.md  2026-04-29-bwc-clipper-milestone-2-ffmpeg-extract.md  2026-04-29-bwc-clipper-milestone-3-normalize-chain.md  2026-04-29-bwc-clipper-milestone-4-enhance-vad.md  2026-04-29-bwc-clipper-milestone-5-transcribe-align.md  2026-04-29-bwc-clipper-milestone-6-reviewer-ui.md
docs/superpowers/specs/: 2026-04-29-bwc-clipper-design.md  2026-04-29-bwc-clipper-milestone-6-reviewer-ui-design.md
editor/: EditorApp.jsx  EditorApp.test.jsx  api.js  main.jsx  test-setup.js  usePolling.js  usePolling.test.js
editor/components/: EmptyState.jsx  EmptyState.test.jsx  FileListItem.jsx  FileListItem.test.jsx  ProjectView.jsx  ProjectView.test.jsx
editor/components/reviewer/: CollapsedTimeline.jsx  ContextNamesPanel.jsx  ContextNamesPanel.test.jsx  Hotkeys.test.jsx  MediaPane.jsx  MediaPane.test.jsx  ReviewerContext.js  ReviewerView.jsx  ReviewerView.test.jsx  Search.test.jsx  SearchHighlight.jsx  Timeline.jsx  Timeline.test.jsx  TopBar.jsx  TopBar.test.jsx  TranscriptPanel.jsx  TranscriptPanel.test.jsx  Transport.jsx  Transport.test.jsx  UncompressedTimeline.jsx  Waveform.jsx  Waveform.test.jsx  useTimelineGeometry.js  useTimelineGeometry.test.js
electron/: ffmpeg-downloader.js  ffmpeg-hashes.json  main.js  preload.js  splash-preload.js  splash.html
engine/: device.py  df_compat.py  ffmpeg.py  project.py  reviewer_state.py  server.py  source.py  version.py
engine/pipeline/: __init__.py  align.py  enhance.py  extract.py  normalize.py  runner.py  state.py  transcribe.py  vad.py
scripts/: build-editor.js
tests/: conftest.py  test_ffmpeg.py  test_pipeline_align.py  test_pipeline_enhance.py  test_pipeline_extract.py  test_pipeline_normalize.py  test_pipeline_runner.py  test_pipeline_state.py  test_pipeline_transcribe.py  test_pipeline_vad.py  test_project.py  test_reviewer_state.py  test_runner_rerun.py  test_serve_smoke.py  test_server.py  test_server_context.py  test_server_media.py  test_server_project.py  test_server_retranscribe.py  test_server_routes_m6.py  test_server_source.py  test_source.py  test_version.py
tests/integration/: conftest.py  test_reviewer_endpoints.py  test_stages_real_models.py
