[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bwc-clipper-engine"
version = "0.0.1"
description = "BWC Clipper Python engine — transcription pipeline, ffmpeg orchestration, clip composition."
authors = [{ name = "Andy Schrader" }]
license = { text = "Consumer Attorney Open Source License v1.0" }
requires-python = ">=3.11,<3.13"

# Stage 3 (DeepFilterNet) and Stage 4 (Silero VAD) bring the engine's first
# real runtime deps. torch is a transitive of deepfilternet (CPU wheel by
# default; GPU acceleration is a manual reinstall — see README).
# torch/torchaudio are pinned <2.6 because deepfilternet 0.5.x uses
# torchaudio.backend.common which was removed in torchaudio 2.6+.
dependencies = [
    "deepfilternet>=0.5",
    "silero-vad>=5.0",
    "soundfile>=0.12",
    "torch>=1.12,<2.6",
    "torchaudio>=0.12,<2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7,<9",
    "pytest-timeout>=2.2",
    "ruff>=0.5",
    "requests>=2.31",  # used in tests/test_serve_smoke.py only
]

[tool.setuptools.packages.find]
include = ["engine*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-v --tb=short"
timeout = 30
markers = [
    "smoke: end-to-end smoke tests that start subprocesses",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]
